--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "type-check:watch": "npm run type-check -- --watch",
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline"
+    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.17.1"
@@ -19,6 +20,9 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/express": "^4.17.7",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
     "jest": "^26.1.0",
     "nodemon": "^2.0.4",
     "typescript": "^3.9.7"
