--- a/package.json
+++ b/package.json
@@ -9,25 +9,33 @@
     "build": "npm run build:types && npm run build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "test": "jest",
-    "dev": "nodemon ./src/main.ts"
-
+    "test": "jest --detectOpenHandles --debug",
+    "dev": "nodemon -r dotenv/config ./src/main.ts"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "@types/dotenv": "^8.2.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-promise-router": "^4.0.1",
+    "pg": "^8.3.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.10.5",
     "@babel/core": "^7.10.5",
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
     "@types/express": "^4.17.7",
+    "@types/express-promise-router": "^3.0.0",
     "@types/jest": "^26.0.7",
     "@types/node": "^14.0.26",
+    "@types/pg": "^7.14.4",
     "@types/supertest": "^2.0.10",
-    "jest": "^26.1.0",
+    "jest": "^26.2.2",
     "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
+    "regenerator-runtime": "^0.13.7",
     "supertest": "^4.0.2",
     "typescript": "^3.9.7"
   }
