--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@types/dotenv": "^8.2.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-promise-router": "^4.0.1",
@@ -26,6 +27,7 @@
     "@babel/plugin-transform-runtime": "^7.11.0",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
+    "@types/body-parser": "^1.19.0",
     "@types/express": "^4.17.7",
     "@types/express-promise-router": "^3.0.0",
     "@types/jest": "^26.0.7",
